--- a/generateApp/client_app/views/order_details.ejs
+++ b/generateApp/client_app/views/order_details.ejs
@@ -4,16 +4,15 @@
 <div class="section">
     <div class="container">
         <div class="row">
-
-
+            <% if (typeof(order) !== 'undefined' && order != null && order.length > 0) { let formating=Intl.NumberFormat('en-US')  %>
                 <div class="col-md-12">
                     <div class="panel panel-info">
                         <div class="panel-heading" style="background-color: #223f3a;">
                             <div class="panel-title" >
                                 <div class="row">
                                     <div class="col-md-12" style="display: flex; justify-content: space-between; align-items: center;">
-                                        <h3 style="color: #d3a04f;"><i class="fa fa-shopping-cart"></i> <span style="color: #fff;">Commande ref ...</span></h3>
-                                        <h3 style="color: #d3a04f;">2 <span style="color: #fff; font-size: 15px;"> Produits</span></h3>
+                                        <h3 style="color: #d3a04f;"><i class="fa fa-shopping-cart"></i> <span style="color: #fff; margin-left: 5px;">#<%= order[0].order_ref %></span></h3>
+                                        <h3 style="color: #d3a04f;"><%= order[0].products_count  %> <span style="color: #fff; font-size: 15px;"> Produits</span></h3>
                                     </div>
                                 </div>
                             </div>
@@ -41,48 +40,75 @@
                             </div>
                             <hr>
 						</div>
-                            <div class="row">
-                                <div class="col-md-2 col-xs-12 text-center"><img class="img-responsive" src="/img/product/1/main.jpg" width="80">
-                                </div>
-                                <div class="col-md-4 col-xs-12">
-                                    <h4 class="product-name"><strong>
-										INFINITY ROUGE</strong></h4><h4><small>
-											INFINITY ROUGE</small></h4>
-                                </div>
-                                <div class="col-md-6" style="display: flex; justify-content: space-between;">
-                                    <div class="col-md-6 col-xs-8">
-                                        <h4><strong>
-                                            5,700 DA
-                                       </strong></h4>
+                            <% if (typeof(order_p) !== 'undefined' && order_p != null && order_p.length > 0) { %>
+                            <% for (var i = 0; i < order_p.length; i++) { %>
+                                <div class="row">
+                                    <div class="col-md-2 col-xs-12 text-center"><img class="img-responsive" src="/img/product/<%= order_p[i].product_id %>/main.jpg" width="80">
                                     </div>
-                                    <div class="col-md-2 col-xs-2">
-                                        <h4><strong>
-                                            2</strong></h4>
+                                    <div class="col-md-4 col-xs-12">
+                                        <h4 class="product-name"><strong>
+                                            <%= order_p[i].product_name %></strong></h4><h4><small>
+                                                <%= order_p[i].product_desig %></small></h4>
                                     </div>
-                                    <div class="col-md-4 col-xs-2 text-right">
-										<h4><strong>
-                                            
-                                       5,700 DA</strong></h4>
+                                    <div class="col-md-6" style="display: flex; justify-content: space-between;">
+                                        <div class="col-md-6 col-xs-8">
+                                            <h4><strong>
+                                                <%= formating.format(order_p[i].product_price_o)+" DA" %>
+                                        </strong></h4>
+                                        </div>
+                                        <div class="col-md-2 col-xs-2">
+                                            <h4><strong>
+                                               <%= order_p[i].product_qt_o %></strong></h4>
+                                        </div>
+                                        <div class="col-md-4 col-xs-2 text-right">
+                                            <h4><strong>
+                                                <%= formating.format(order_p[i].product_qt_o * order_p[i].product_price_o)+" DA" %>  
+                                        </strong></h4>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <hr>
+                                <hr>
+                            <% }} %>
 
                         </div>
 
 
-                            <div class="panel-footer">
-                                <div class="row text-center">
-                                    <div class="col-md-12 myTotalCart">
-                                        <h4 class="text-right">Total : <strong> 
-											11,400 DA
-                                        </strong></h4>
-                                    </div>
+                        <div class="panel-footer">
+                            <div class="row text-right">
+                                <div class="col-md-12" style="margin: 5px 0px;">
+                                    <span class="text-left">Sous Total : <strong> 
+                                        <%= formating.format(order[0].order_total_price)+" DA" %>
+                                    </strong></span>
+                                </div>
+                                <div class="col-md-12" style="margin: 5px 0px;">
+                                    <span class="text-left">Estimation pour : <strong> 
+                                        <%= order[0].wilaya_name %>
+                                    </strong></span>
+                                </div>
+                                <div class="col-md-12" style="margin: 5px 0px;">
+                                    <span class="text-left">Livraison : <strong> 
+                                        <%= formating.format(order[0].delivery_price)+" DA" %>
+                                    </strong></span>
+                                </div>
+                                <div class="col-md-12" style="margin: 5px 0px;">
+                                    <span class="text-left">Total : <strong> 
+                                        <%= formating.format(order[0].order_total_price + order[0].delivery_price)+" DA" %>
+                                    </strong></span>
                                 </div>
                             </div>
+                        </div>
                             
                     
                     </div>
+                    <% } else { %>
+
+                        <div class="alert alert-danger m-5" role="alert">
+                         
+                          Aucune commande correspondante !
+                     
+                        </div>
+                    
+                      <% } %>
                 </div>
                 
         </div>
