--- a/generateApp/client_app/views/orders.ejs
+++ b/generateApp/client_app/views/orders.ejs
@@ -20,7 +20,7 @@
                         <% for (var i = 0; i < orders.length; i++) { %>
                         <div class="row">
                             <div class="col-md-4 col-xs-6">
-                                <h4 class="product-name"><a href="#"><strong><%= orders[i].order_date.toISOString().substr(0,10) %></strong></a></h4><h4><small><%= orders[i].products_count + " Produits" %></small></h4>
+                                <h4 class="product-name"><a href="/order/<%= orders[i].order_id %>"><strong><%= orders[i].order_date.toISOString().substr(0,10) %></strong></a></h4><h4><small><%= orders[i].products_count + " Produits" %></small></h4>
                             </div>
                             <div class="col-md-6 col-xs-12" style="display: flex; justify-content: space-between;">
                                 <div class="col-md-8 col-xs-8 text-right">
