--- a/generateApp/admin_app/views/order_details.ejs
+++ b/generateApp/admin_app/views/order_details.ejs
@@ -6,7 +6,7 @@
             <div class="py-5">
                 <div class="row g-4 align-items-center">
                     <div class="col">
-                        <h1 class="h3 m-0">Commande #<%= order[0].order_id %></h1>
+                        <h1 class="h3 m-0">Commande #<%= order[0].order_ref %></h1>
                     </div>
                     
                     <div class="col-auto d-flex">
