--- a/generateApp/admin_app/views/orders_list.ejs
+++ b/generateApp/admin_app/views/orders_list.ejs
@@ -36,7 +36,7 @@
                         
                     %>
                         <tr>
-                            <td><a href="/order/<%= orders[i].order_id %>/details" class="text-reset">#<%= orders[i].order_id %></a></td>
+                            <td><a href="/order/<%= orders[i].order_id %>/details" class="text-reset">#<%= orders[i].order_ref %></a></td>
                             <td><%=orders[i].order_date.toISOString().substr(0,10)%></td>
                             <td class="text-reset"><%= orders[i].user_lastname +" "+ orders[i].user_name %></td>
                             <% 
