--- a/generateApp/client_app/views/home.ejs
+++ b/generateApp/client_app/views/home.ejs
@@ -1,13 +1,13 @@
 <%- include ("layout/header") %>
 
 		<!-- HOT DEAL SECTION -->
-		<div id="hot-deal" class="section">
+		<div id="hot-deal" class="section" style=" background: url('./img/banner/main.jpg') center no-repeat">
 			<!-- container -->
 			<div class="container">
 				<!-- row -->
 				<div class="row">
 					<div class="col-md-12">
-						<div class="hot-deal" style="padding: 5%;">
+						<div class="hot-deal" style="padding: 5%">
 							<!-- <ul class="hot-deal-countdown">
 								<li>
 									<div>
@@ -34,7 +34,7 @@
 									</div>
 								</li>
 							</ul> -->
-							<h2 class="text-uppercase" style="  color: #d3a04f; margin-bottom: 5%;">Découvre notre gamme de produits</h2>
+							<h2 class="text-uppercase" style="  color: #d3a04f; margin-bottom: 5%;"><%= banner.text %></h2>
 
 							<a class="primary-btn cta-btn" href="/products/list/1">Voir Plus</a>
 						</div>
