--- a/generateApp/admin_app/views/order_details.ejs
+++ b/generateApp/admin_app/views/order_details.ejs
@@ -10,7 +10,7 @@
                     </div>
                     
                     <div class="col-auto d-flex">
-                        <a href="/invoice" class="btn btn-secondary me-3">Imprimer</a>
+                        <a href="/order/<%= order[0].order_id %>/print" target="_blank" class="btn btn-secondary me-3">Imprimer</a>
                         <a href="/orders/list" class="btn btn-warning me-3">Retour</a>
                         <% if (order[0].stat_id == 1) { %>
                         <a href="/order/<%= order[0].order_id %>/status/2" class="btn btn-danger me-3">Annuler</a>
