update from server

--- a/generateApp/admin_app/views/home_page_edit.ejs
+++ b/generateApp/admin_app/views/home_page_edit.ejs
@@ -50,6 +50,7 @@
                 </div>
             </div>
             </form>
+            <!--
             <form action="/video/edit" enctype="multipart/form-data" method="post">
             <div class="card mt-5">
                 <div class="card-body p-5">
@@ -82,10 +83,11 @@
                         </table>
                     </div>
                     <div class="sa-divider"></div>
-                    <!-- <div class="px-5 py-4 my-2"><a href="#">Upload new image</a></div> -->
+                    <!-- <div class="px-5 py-4 my-2"><a href="#">Upload new image</a></div>
                 </div>
             </div>
            </form>
+            -->
         </div>
     </div>
 </div><!-- sa-app__body / end --><!-- sa-app__footer -->
