--- a/generateApp/client_app/views/layout/footer.ejs
+++ b/generateApp/client_app/views/layout/footer.ejs
@@ -72,7 +72,7 @@
 						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 						Copyright &copy;
 						<script>document.write(new Date().getFullYear());</script> Tous droits réservés | Réaliser <i class="fa fa-heart-o" aria-hidden="true"></i> par<a
-							href="https://www.blackconcept-dev.com" target="_blank" style="color: #fff !important;"> Black concept - Sarl</a>
+							href="https://www.icosnet.com" target="_blank" style="color: #fff !important;"> Icosnet - Sarl</a>
 						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 					</span>
 				</div>
