--- a/generateApp/admin_app/views/layouts/footer.ejs
+++ b/generateApp/admin_app/views/layouts/footer.ejs
@@ -9,7 +9,7 @@
                         <footer class="footer mt-auto py-3 bg-light">
                             <div class="container">
                                 <div class="d-flex justify-content-between">
-                                    <span class="text-muted small">&copy; 2022<a href="https://blackconcept-dev.com/" target="_blank"> Black Concept</a> , Sarl</span>
+                                    <span class="text-muted small">&copy; 2024<a href="https://icosnet.com/" target="_blank"> Icosnet</a> , Sarl</span>
                                 </div>
                             </div>
                         </footer>
