--- a/generateApp/admin_app/views/login.ejs
+++ b/generateApp/admin_app/views/login.ejs
@@ -6,7 +6,7 @@
   <meta charSet="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="format-detection" content="telephone=no" />
-  <title>Iphone Prix Algerie - eCommerce Dashboard Template</title><!-- icon -->
+  <title>Literie d'amour - admin</title><!-- icon -->
   <link rel="icon" type="image/png" href="assets/images/favicon.png" /><!-- fonts -->
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i,900,900i" />
