update checkout add other products

--- a/generateApp/client_app/views/checkout.ejs
+++ b/generateApp/client_app/views/checkout.ejs
@@ -72,6 +72,7 @@
 						</div>
 					</div>
 					<!-- /Billing Details -->
+					<button type="submit" value="1" name="othersCheckout" class="primary-btn order-submit" style="width: 100%;">Ajouter d'autre produit</button>
 					<button type="submit" class="primary-btn order-submit" style="width: 100%;">Commander</button>
 					<!-- Shiping Details -->
 
