--- a/generateApp/admin_app/views/stats_product.ejs
+++ b/generateApp/admin_app/views/stats_product.ejs
@@ -25,7 +25,7 @@
                         data-sa-search-input="#table-search">
                         <thead>
                             <tr>                 
-                                <th class="min-w-20x">Produits</th>
+                                <th class="min-w-20x bg-light">Produits</th>
                                 <th>Qte Vendu</th>
                                 <th>Encaissement Total</th>                                                        
                             </tr>
@@ -39,7 +39,7 @@
                               
                               %>
                             <tr>
-                                <td>
+                                <td class="bg-light">
                                     <div class="d-flex align-items-center"><a href="/product/<%= product[i].product_id %>/details" class="me-4">
                                             <div class="sa-symbol sa-symbol--shape--rounded sa-symbol--size--lg">
                                                 <img src="/img/product/<%= product[i].product_id %>/main.jpg" width="40" height="40"
