--- a/generateApp/admin_app/views/details_list.ejs
+++ b/generateApp/admin_app/views/details_list.ejs
@@ -24,7 +24,7 @@
                     <div class="alert alert-success ms-4 me-4" role="alert">Succées !</div>
                 <% } %>  
                 <div class="sa-divider"></div>
-                <table class="sa-datatables-init" data-order="[[ 1, &quot;asc&quot; ]]"
+                <table class="sa-datatables-init" data-order="[]"
                 data-sa-search-input="#table-search">
                 <thead>
                     <tr>                   
