--- a/generateApp/admin_app/views/orders_list.ejs
+++ b/generateApp/admin_app/views/orders_list.ejs
@@ -13,7 +13,7 @@
                 <div class="p-4"><input type="text" placeholder="Rechercher ..."
                         class="form-control form-control--search mx-auto" id="table-search" /></div>
                 <div class="sa-divider"></div>
-                <table class="sa-datatables-init text-nowrap" data-order="[[ 1, &quot;desc&quot; ]]"
+                <table class="sa-datatables-init text-nowrap" data-order="[]"
                     data-sa-search-input="#table-search">
                     <thead>
                         <tr>
