--- a/generateApp/admin_app/views/stats_product.ejs
+++ b/generateApp/admin_app/views/stats_product.ejs
@@ -21,7 +21,7 @@
                         </div>
                     </div>
                     <div class="sa-divider"></div>
-                    <table class="sa-datatables-init" data-order="[[ 1, &quot;asc&quot; ]]"
+                    <table class="sa-datatables-init" data-order="[]"
                         data-sa-search-input="#table-search">
                         <thead>
                             <tr>                 
