--- a/generateApp/admin_app/views/delivery_price_list.ejs
+++ b/generateApp/admin_app/views/delivery_price_list.ejs
@@ -14,7 +14,7 @@
                 <div class="p-4"><input type="text" placeholder="Rechercher ..."
                         class="form-control form-control--search mx-auto" id="table-search" /></div>
                 <div class="sa-divider"></div>
-                <table class="sa-datatables-init" data-order="[[ 1, &quot;asc&quot; ]]"
+                <table class="sa-datatables-init" data-order="[]"
                     data-sa-search-input="#table-search">
                     <thead>
                         <tr>
