add multiple video

--- a/generateApp/admin_app/views/home_page_edit.ejs
+++ b/generateApp/admin_app/views/home_page_edit.ejs
@@ -50,12 +50,12 @@
                 </div>
             </div>
             </form>
-            <!--
-            <form action="/video/edit" enctype="multipart/form-data" method="post">
+            
+            <form action="/video/edit/1" enctype="multipart/form-data" method="post">
             <div class="card mt-5">
                 <div class="card-body p-5">
                     <div class="mb-5" style="display: flex; justify-content: space-between; align-items: center;">
-                        <h2 class="mb-0 fs-exact-18">Choissisez la vidéo principal</h2>
+                        <h2 class="mb-0 fs-exact-18">Choissisez une vidéo</h2>
                         <button type="submit" class="btn btn-warning">Sauvegarder</button>
                     </div>
                 </div>
@@ -73,7 +73,7 @@
                                 <tr>
                                     <td>
                                         <div class=" sa-symbol--size--lg">
-                                            <video src="/img/video/main.mp4" height="100" alt="video" autoplay muted></video>
+                                            <video src="/img/video/1.mp4" height="100" alt="video" autoplay muted></video>
                                         </div>
                                     </td>
                                     <td><input type="file" accept="video/*" name="main" class="form-control form-control-sm" id="formFile-2-sm" />
@@ -83,11 +83,83 @@
                         </table>
                     </div>
                     <div class="sa-divider"></div>
-                    <!-- <div class="px-5 py-4 my-2"><a href="#">Upload new image</a></div>
+                    <!-- <div class="px-5 py-4 my-2"><a href="#">Upload new image</a></div> -->
                 </div>
             </div>
            </form>
-            -->
+           <form action="/video/edit/2" enctype="multipart/form-data" method="post">
+            <div class="card mt-5">
+                <div class="card-body p-5">
+                    <div class="mb-5" style="display: flex; justify-content: space-between; align-items: center;">
+                        <h2 class="mb-0 fs-exact-18">Choissisez une vidéo</h2>
+                        <button type="submit" class="btn btn-warning">Sauvegarder</button>
+                    </div>
+                </div>
+                <div class="mt-n5">
+                    <div class="sa-divider"></div>
+                    <div class="table-responsive">
+                        <table class="sa-table">
+                            <thead>
+                                <tr>
+                                    <th class="w-min">Vidéo</th>
+                                    <th class="min-w-10x"></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>
+                                        <div class=" sa-symbol--size--lg">
+                                            <video src="/img/video/2.mp4" height="100" alt="video" autoplay muted></video>
+                                        </div>
+                                    </td>
+                                    <td><input type="file" accept="video/*" name="main" class="form-control form-control-sm" id="formFile-2-sm" />
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="sa-divider"></div>
+                    <!-- <div class="px-5 py-4 my-2"><a href="#">Upload new image</a></div> -->
+                </div>
+            </div>
+           </form>
+           <form action="/video/edit/3" enctype="multipart/form-data" method="post">
+            <div class="card mt-5">
+                <div class="card-body p-5">
+                    <div class="mb-5" style="display: flex; justify-content: space-between; align-items: center;">
+                        <h2 class="mb-0 fs-exact-18">Choissisez une vidéo</h2>
+                        <button type="submit" class="btn btn-warning">Sauvegarder</button>
+                    </div>
+                </div>
+                <div class="mt-n5">
+                    <div class="sa-divider"></div>
+                    <div class="table-responsive">
+                        <table class="sa-table">
+                            <thead>
+                                <tr>
+                                    <th class="w-min">Vidéo</th>
+                                    <th class="min-w-10x"></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>
+                                        <div class=" sa-symbol--size--lg">
+                                            <video src="/img/video/3.mp4" height="100" alt="video" autoplay muted></video>
+                                        </div>
+                                    </td>
+                                    <td><input type="file" accept="video/*" name="main" class="form-control form-control-sm" id="formFile-2-sm" />
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="sa-divider"></div>
+                    <!-- <div class="px-5 py-4 my-2"><a href="#">Upload new image</a></div> -->
+                </div>
+            </div>
+           </form>
+            
         </div>
     </div>
 </div><!-- sa-app__body / end --><!-- sa-app__footer -->
